# ipget

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  cspell.config.yaml  debian.Dockerfile  pyproject.toml  renovate.json
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: codeql.yml  dependabot-labels.yml  docker-build-publish.yml  manage-pull-requests.yml  pull-request-checks.yml  python-lint.yml  python-tests.yml  release-drafter.yml
docs/devcontainer-test-dotenv/: test-mysql.env  test-postgres.env  test-sqlite-file.env
src/: app.py
src/ipget/: alchemy.py  custom_strategies.py  errors.py  helpers.py  ipget.py  notifications.py  settings.py
tests/: conftest.py  test_alchemy.py  test_helpers.py  test_notifications.py  test_settings.py
