[project]
requires-python = ">=3.13"
name = "ipget"
version = "0.11.0"
description = "Gets public ip and writes to a database. Optionally notifies on change, and pings healthchecks.io."
authors = [{ name = "Andrew Kinsman", email = "69199502+LunaPurpleSunshine@users.noreply.github.com" }]
license = {file = "LICENCE.txt"}
readme = "README.md"

dependencies = [
    "discord-webhook == 1.3.1",
    "pg8000 == 1.31.2",
    "pydantic-settings ==2.6.1",
    "pymysql == 1.1.1",
    "requests == 2.32.3",
    "sqlalchemy ==2.0.36",
]

[tool.uv]
dev-dependencies = [
    "rope == 1.13.0",
    "ruff ==0.8.3",
    "pytest ==8.3.4",
    "pytest-cov ==6.0.0",
    "pre-commit == 4.0.1",
    "pytest-md == 0.2.0",
    "pytest-emoji == 0.2.0",
    "python-dotenv == 1.0.1",
    "hypothesis ==6.122.3",
    "mypy ==1.13.0",
    "types-requests ==2.32.0.20241016",
]

[tool.pytest.ini_options]
pythonpath = "src/"
testpaths = ["tests/"]
xfail_strict = true
markers = ["no_test_env"]

[tool.coverage.run]
source = ["src/ipget"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "RUF", "TID252"]

[tool.mypy]
mypy_path = "src"
