[project]
requires-python = ">=3.13, <3.14"
name = "ipget"
version = "0.11.0"
description = "Gets public ip and writes to a database. Optionally notifies on change, and pings healthchecks.io."
authors = [{ name = "Andrew Kinsman", email = "69199502+LunaPurpleSunshine@users.noreply.github.com" }]
license = {file = "LICENCE.txt"}
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
]

dependencies = [
    "discord-webhook ==1.4.1",
    "pg8000 == 1.31.2",
    "pydantic-settings ==2.9.1",
    "pymysql == 1.1.1",
    "requests ==2.32.4",
    "sqlalchemy ==2.0.41",
]

[dependency-groups]
dev = [
    { include-group = "tools" },
    { include-group = "lint" },
    { include-group = "test" },
]
tools = [
    "pre-commit>=4.2.0",
    "rope>=1.13.0",
]
lint = [
    "mypy>=1.16.0",
    "ruff==0.11.13",
    "types-requests>=2.32.0.20250602",
]
test = [
    "freezegun>=1.5.2",
    "hypothesis>=6.135.2",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "pytest-emoji>=0.2.0",
    "pytest-md>=0.2.0",
    "python-dotenv>=1.1.0",
]
ci = [
    { include-group = "lint" },
    { include-group = "test" },
    "pytest-emoji>=0.2",
    "pytest-md>=0.2",
]


######### Lint/Formatter Settings #########

[tool.pytest.ini_options]
pythonpath = "src/"
testpaths = ["tests/"]
xfail_strict = true
markers = ["no_test_env"]

[tool.coverage.run]
source = ["src/ipget"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "BLE", "A", "RUF", "TID252"]

[tool.mypy]
mypy_path = "src"
